@@ -1,5 +1,16 @@
 2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[int] Use gnulib module `sig2str'; push `psignal' cppcond down.
+
+	* m4/gnulib-cache.m4 (gl_MODULES): Add `sig2str'.
+	* configure.ac (AC_CHECK_FUNCS_ONCE):
+	Add `strsignal'; remove `sys_siglist'.
+	(rcs_have_psignal_or_strsignal): New shell var.
+	(PRESUMABLY_STANDARD_ENOUGH_BY_NOW): Remove `ac_cv_func_psignal',
+	`ac_cv_func_sys_siglist'; add `rcs_have_psignal_or_strsignal'.
+
+2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[build] Use gnulib module `double-slash-root'.
 
 	* m4/gnulib-cache.m4 (gl_MODULES): Add `double-slash-root'.
